# hf-inference-status

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md
docs/polars/: polars_feature_and_data_types.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  styles.css  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: favorite_model_inference.rs  inference_model_status.rs  mod.rs  prelude.rs
src-tauri/src/models/: hf_model_inference.rs  mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/favorite_model_inference/: service.rs
src-tauri/src/modules/inference_models/: dto.rs  fetch.rs  mod.rs  parser.rs  prelude.rs  query.rs  utils.rs
src-tauri/src/modules/inference_models/dto/: api_response.rs  data_collection.rs  mod.rs  prelude.rs
src-tauri/src/states/: inference_model_state.rs  mod.rs  prelude.rs  user_favorite_state.rs
src-tauri/src/types/: mod.rs  prelude.rs  table_columns.rs
src/components/: mod.rs
src/components/hf_models/: mod.rs
src/components/hf_models/inference_status/: group_by_col_table.rs  (+3 more)
src/components/nav_bar/: main.rs  mod.rs  setting_button.rs
src/components/table_options_panel/: custom_button.rs  main.rs  mod.rs
src/hooks/: mod.rs  use_interval.rs
src/states/: app_state.rs  favorite_inference_service_state.rs  mod.rs  model_inference_state.rs  prelude.rs
src/types/: inference_model_status.rs  inference_table.rs  mod.rs  prelude.rs
src/utils/: mod.rs  tauri_invoke.rs
src/utils/formatter/: mod.rs
(+10 files in other folders)
