[package]
name = "hg-inference-status"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hg_inference_status_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
polars = { version = "0.52.0", features = ["lazy", "regex", "serde", "serde-lazy", "rows", "timezones", "strings", "is_in"] }
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.25"
tokio = { version = "1", features = ["full"] }
blake3 = "1.8"
